src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
          - name: DB_USERNAME
            valueFrom:
               secretKeyRef:
                 name: my-database-secret
                 key: user
          - name: DB_PASSWORD
            valueFrom:
               secretKeyRef:
                 name: my-database-secret
                 key: password
          - name: GC_MAX_METASPACE_SIZE
            value: "150"
          - name: JAVA_OPTIONS
            value: "-Dthorntail.datasources.data-sources.MyDS.connection-url=jdbc:postgresql://$(MY_DATABASE_SERVICE_HOST):$(MY_DATABASE_SERVICE_PORT)/my_data -Dthorntail.datasources.data-sources.MyDS.user-name=$(DB_USERNAME) -Dthorntail.datasources.data-sources.MyDS.password=$(DB_PASSWORD) -Dthorntail.datasources.data-sources.MyDS.driver-name=postgresql"
