src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: swarm-greenfield
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
